[package]
name = "rusted_atari2600"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 2

[dependencies]
argh = "0.1.12"
bitfield = "0.14.0"
hound = "3.5.1"
js-sys = "0.3.67"
sdl2 = "0.35.2"
strum = "0.25.0"
strum_macros = "0.25.3"

[profile.release]
debug = 1
